--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,6 +8,7 @@
 @import "./utils/variable";
 @import "./utils/fonts";
 @import "./utils/clearOpenModalStyle";
+@import "./utils/img";
 
 /* Components */
 @import "./components/canvas";
