--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -76,6 +76,15 @@ $danger:        $red !default;
 $light:         $gray-100 !default;
 $gray:          $gray-600;
 $dark:          $gray-900 !default;
+$cream1:        #E9D2A3; //new
+$cream2:        #f7e7c8; //new
+$cream3:        #f7edd9; //new
+$orange1:       #fc9700; //new
+$green1:        #166907; //new
+$green2:        #83B875; //new
+$brown1:        #570f00; //new
+$purple1:        #2d1113; //new
+$gray1:         #4c514d; //new
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -88,7 +97,16 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "gray":       $gray-600,
-  "dark":       $dark
+  "dark":       $dark,
+  "cream1":     $cream1,
+  "cream2":     $cream2,
+  "cream3":     $cream3,
+  "orange1":    $orange1,
+  "green1":     $green1,
+  "green2":     $green2,
+  "brown1":     $brown1,
+  "purple1":    $purple1,
+  "gray1":     $gray1,
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -294,7 +312,18 @@ $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) 
 // scss-docs-start position-map
 $position-values: (
   0: 0,
+  10: 10%,
+  20: 20%,
+  30: 30%,
+  40: 40%,
   50: 50%,
+  55: 55%,
+  60: 60%,
+  65: 65%,
+  70: 70%,
+  75: 75%,
+  80: 80%,
+  90: 90%,
   100: 100%
 ) !default;
 // scss-docs-end position-map
