--- a/src/assets/utils/_clearOpenModalStyle.scss
+++ b/src/assets/utils/_clearOpenModalStyle.scss
@@ -1,7 +1,7 @@
 // 修復：打開 modal 時會出現畫面抖動
 // https://blog.csdn.net/fd214333890/article/details/80274160
 body{
-    overflow: scroll !important;
+    overflow: auto !important;
     padding-right: 0 !important;
 }
 
